# PythonicArchiveKit

./: .gitignore  README.MD  example.py  experiments.py  mini_pak.py  pak.py  pak_interface.py  pyproject.toml  requirements.txt  tests.py
pythonic_archive_kit/: __init__.py  base.py  libraries.py  magic.py  mini_pak.py  pak.py  typing.py  utils.py
