[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
encryption = ["cryptography"]
extended = ["dill"]
all = ["cryptography", "dill"]

[project]
name = "pythonic_archive_kit"
authors = [{name = "Alyce Osbourne"}]
readme = "README.MD"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/AlyceOsbourne/PythonicArchiveKit"
